Scenarios/AKS-OpenAI-CogServe-Redis-Embeddings/kubernetes/patches/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/azure-open-ai-embeddings-qna-default: "true"
        service: web
    spec:
      serviceAccountName: serversa
      containers:
        - env:
            
            - name: BLOB_ACCOUNT_KEY
              valueFrom: 
                secretKeyRef: 
                  name: openaiapikey
                  key: blobaccountkey
            - name: BLOB_ACCOUNT_NAME
              valueFrom:
                configMapKeyRef:
                  key: BLOB_ACCOUNT_NAME
                  name: env
            - name: BLOB_CONTAINER_NAME
              valueFrom:
                configMapKeyRef:
                  key: BLOB_CONTAINER_NAME
                  name: env
            - name: CHUNK_OVERLAP
              valueFrom:
                configMapKeyRef:
                  key: CHUNK_OVERLAP
                  name: env
            - name: CHUNK_SIZE
              valueFrom:
                configMapKeyRef:
                  key: CHUNK_SIZE
                  name: env
            - name: CONVERT_ADD_EMBEDDINGS_URL
              valueFrom:
                configMapKeyRef:
                  key: CONVERT_ADD_EMBEDDINGS_URL
                  name: env
            - name: FORM_RECOGNIZER_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: FORM_RECOGNIZER_ENDPOINT
                  name: env
            - name: FORM_RECOGNIZER_KEY
              valueFrom: 
                secretKeyRef: 
                  name: openaiapikey
                  key: formrecognizerkey
            - name: NUMBER_OF_EMBEDDINGS_FOR_QNA
              valueFrom:
                configMapKeyRef:
                  key: NUMBER_OF_EMBEDDINGS_FOR_QNA
                  name: env
            - name: OPENAI_API_BASE
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_API_BASE
                  name: env
            - name: OPENAI_API_KEY
              valueFrom: 
                secretKeyRef: 
                  name: openaiapikey
                  key: openaiapikey
            - name: OPENAI_DEPLOYMENT_TYPE
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_DEPLOYMENT_TYPE
                  name: env
            - name: OPENAI_EMBEDDINGS_ENGINE
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_EMBEDDINGS_ENGINE
                  name: env
            - name: OPENAI_EMBEDDINGS_ENGINE_DOC
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_EMBEDDINGS_ENGINE_DOC
                  name: env
            - name: OPENAI_EMBEDDINGS_ENGINE_QUERY
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_EMBEDDINGS_ENGINE_QUERY
                  name: env
            - name: OPENAI_ENGINE
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_ENGINE
                  name: env
            - name: OPENAI_MAX_TOKENS
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_MAX_TOKENS
                  name: env
            - name: OPENAI_TEMPERATURE
              valueFrom:
                configMapKeyRef:
                  key: OPENAI_TEMPERATURE
                  name: env
            - name: QUEUE_NAME
              valueFrom:
                configMapKeyRef:
                  key: QUEUE_NAME
                  name: env
            - name: REDIS_ADDRESS
              valueFrom:
                configMapKeyRef:
                  key: REDIS_ADDRESS
                  name: env
            - name: REDIS_ARGS
              valueFrom:
                configMapKeyRef:
                  key: REDIS_ARGS
                  name: env
            - name: REDIS_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PASSWORD
                  name: env
            - name: REDIS_PORT
              valueFrom:
                configMapKeyRef:
                  key: REDIS_PORT
                  name: env
            - name: TRANSLATE_ENDPOINT
              valueFrom:
                configMapKeyRef:
                  key: TRANSLATE_ENDPOINT
                  name: env
            - name: TRANSLATE_KEY
              valueFrom: 
                secretKeyRef: 
                  name: openaiapikey
                  key: translatekey
            - name: TRANSLATE_REGION
              valueFrom:
                configMapKeyRef:
                  key: TRANSLATE_REGION
                  name: env
            - name: VECTOR_STORE_TYPE
              valueFrom:
                configMapKeyRef:
                  key: VECTOR_STORE_TYPE
                  name: env
            - name: VNET_DEPLOYMENT
              valueFrom:
                configMapKeyRef:
                  key: VNET_DEPLOYMENT
                  name: env
          image: replaceme.azurecr.io/oai-embeddings:v1
          name: web
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
