Scenarios/AKS-OpenAI-CogServe-Redis-Embeddings/kubernetes/patches/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "10254"
    prometheus.io/scrape: "true"
    service.beta.kubernetes.io/azure-dns-label-name: openaidemo
  labels:
    app.kubernetes.io/component: ingress-controller
    app.kubernetes.io/name: external-dns-private
  name: nginx-svc
  namespace: app-routing-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  - name: prometheus
    port: 10254
    protocol: TCP
    targetPort: prometheus
  selector:
    app: nginx
  sessionAffinity: None
  type: LoadBalancer
