Scenarios/AKS-OpenAI-CogServe-Redis-Embeddings/kubernetes/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: "*.eastus.cloudapp.azure.com"
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
